--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AppInitialSetting</string>
+    <string name="app_name">KakaoBank</string>
     <string name="firstTitle">First</string>
     <string name="secondTitle">Second</string>
     <string name="thirdTitle">Third</string>
