--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,5 @@
 <resources>
     <string name="app_name">KakaoBank</string>
-    <string name="firstTitle">First</string>
-    <string name="secondTitle">Second</string>
-    <string name="thirdTitle">Third</string>
-    <string name="forthTitle">Forth</string>
-
-    <string name="back_button_close_guide">\'이전\' 버튼을 한번 더 누르시면 종료됩니다.</string>
-    <string name="mainBottomMenus">메인화면 하단 메뉴들</string>
-    <string name="mainUpperFragments">메인화면 상단 프래그먼트들</string>
-
+    <string name="searchResult">검색 결과</string>
+    <string name="myLocker">내 보관함</string>
 </resources>
