--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">KakaoBank</string>
     <string name="searchResult">검색 결과</string>
     <string name="myLocker">내 보관함</string>
+    <string name="search">검색</string>
 </resources>
